Yodlee API Code Commit

--- a/tcm/modules/web/src/main/resources/log4j.properties
+++ b/tcm/modules/web/src/main/resources/log4j.properties
@@ -7,11 +7,20 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
 
 log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.logfile.File=${catalina.base}/logs/invessence.log
+log4j.appender.logfile.File=D:/Project/Abhang/logs/tcm.log
+  #${catalina.home}/logs/tcm.log
+  #${catalina.base}/logs/tcm.log
+  #D:/Project/Abhang/logs/tcm.log
 log4j.appender.logfile.Append = true 
 # Keep three backup files.
 #log4j.appender.logfile.MaxBackupIndex=3
 # Pattern to output: date priority [category] - message
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
+
+
+log4j.logger.org.springframework=ERROR,stdout
+log4j.logger.org.apache.axis=ERROR,stdout
+log4j.logger.org.apache.commons=ERROR,stdout
+log4j.logger.httpclient.wire=ERROR,stdout
 
