--- a/tcm/modules/web/src/main/resources/resources.properties
+++ b/tcm/modules/web/src/main/resources/resources.properties
@@ -1,24 +1,22 @@
-############################################################################################################################
-################################################### CoBrandLogin Account ###################################################
+YODLEE_PROCESS_STATUS=A
 
-YODLEE_PROCESS_STATUS=I
+HOST_URI = https://rest.developer.yodlee.com/services/srest/restserver/
 
-HOST_URI = https://yisandbox.yodleeinteractive.com/services/srest/private-sandbox124/
-
-COBRAND_LOGIN = sandbox124
-COBRAND_PASSWORD = Yodlee@123
+COBRAND_LOGIN =sbCobabhangp
+COBRAND_PASSWORD =8f0f5af8-b0c1-4b1e-a86c-518539d14894
 
 BRIDGE_APP_ID = 10003200
-APPLICATION_KEY = 5e1597a5f8fd4401a25c654c93df73b6
-APPLICATION_TOKEN =  1063669881884e458e606b6194d4e0a4
+  #10010352
+APPLICATION_KEY = a458bdf184d34c0cab7ef7ffbb5f016b
+  #3A4CAE9B71A1CCD7FF41F51006E9ED00
+APPLICATION_TOKEN = 1ece74e1ca9e4befbb1b64daba7c4a24
 
-FL_ADD_ACC_URL = https://yisandboxfl.yodleeinteractive.com/appscenter/private-sandbox124/linkAccount.yisandboxfl.action
-FL_ADD_ACC_PARAM = access_type=oauthdeeplink&displayMode=desktop&oauth_callback=${ssl.url}/pages/consumer/aggr/acct.xhtml&cbLocation=top
+FL_ADD_ACC_URL = https://fastlink.yodlee.com/appscenter/fastlinksb/linkAccount.fastlinksb.action
+FL_ADD_ACC_PARAM = oauthdeeplink&displayMode=desktop&oauth_callback=${ssl.url}/pages/consumer/aggr/acct.xhtml&cbLocation=top
 
-FL_EDIT_ACC_URL = https://yisandboxfl.yodleeinteractive.com/appscenter/private-sandbox124/prepareEditSiteAccounts.yisandboxfl.action
-FL_EDIT_ACC_PARAM = access_type=oauthdeeplink&oauth_callback=${ssl.url}/pages/consumer/aggr/acct.xhtml&cbLocation=top&siteAccountId=$SITE_ACC_ID$
+FL_EDIT_ACC_URL =
+FL_EDIT_ACC_PARAM =
 
-FL_REFR_URL = https://yisandboxfl.yodleeinteractive.com/appscenter/private-sandbox124/refreshSiteAccount.yisandboxfl.action
-FL_REFR_PARAM = access_type=oauthdeeplink&oauth_callback=${ssl.url}/pages/consumer/aggr/acct.xhtml&cbLocation=top&siteAccountId=$SITE_ACC_ID$&_flowId=refresh
+FL_REFR_URL =
+FL_REFR_PARAM =
 
-############################################################################################################################
