--- a/tcm/modules/web/src/main/resources/log4j.properties
+++ b/tcm/modules/web/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
 
 log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.logfile.File=D:/Project/Abhang/logs/tcm.log
+log4j.appender.logfile.File=${catalina.base}/logs/invessence.log
   #${catalina.home}/logs/tcm.log
   #${catalina.base}/logs/tcm.log
   #D:/Project/Abhang/logs/tcm.log
