--- a/tcm/modules/broker-webservices/pom.xml
+++ b/tcm/modules/broker-webservices/pom.xml
@@ -106,6 +106,27 @@
 <artifactId>saaj-api</artifactId>
 <version>1.3.5</version></dependency>
 
+	<!-- DocuSign API dependencies -->
+
+    <dependency>
+   <groupId>com.docusign</groupId>
+   <artifactId>docusign-esign-java</artifactId>
+   <version>2.0.1</version>
+</dependency>
+			<!-- Base64 encoding that works in both JVM and Android -->
+			<dependency>
+      <groupId>com.brsanthu</groupId>
+      <artifactId>migbase64</artifactId>
+      <version>2.2</version>
+    </dependency>
+   <dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>20041127.091804</version>
+
+
+</dependency>
+
     </dependencies>
 
 	 <build>
