TD CTO Version 1.20 - Revised 9/7/2016 Prashant

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -30,9 +30,8 @@ Contact us by phone <span style="font-weight: bold">(201) 977-1954</span> or ema
 <a href="mailto:sales@invessence.com">sales@invessence.com</a> with any questions.</p> \n \
 <br/> \n
 
-
 password.reset=We will send an email with a link to reset the password. Please check your email.
-password.reset.email=\n \
+txt.reset.email=\n \
   We have received a request to reset your Invessence password. \
  To complete your request, please click on the below link and follow the instructions. \n\
   {0}/setPassword.xhtml?u={1}&r={2}\n \
@@ -42,8 +41,17 @@ password.reset.email=\n \
   Thank you \n \
   Admin Team, Invessence.com\n
 
+txt.forgot.email=\n \
+  We have received a request to reset your Invessence password. \
+ To complete your request, please click on the below link and follow the instructions. \n\
+  {0}/setPassword.xhtml?u={1}&r={2}\n \
+\n\
+  If clicking on the link doesn't work, try copying and pasting it into your browser\n\
+\n\n \
+  Thank you \n \
+  Admin Team, Invessence.com\n
 
-signup.email=Dear {0}, \n\n \
+txt.welcome.email=Dear {0}, \n\n \
    Welcome to Invessence.com! \n \
  Your userid ({1}) is now registered. \n \
  please visit us at  \n {2}/register.xhtml?u={3}&r={4} \n \
@@ -53,7 +61,17 @@ signup.email=Dear {0}, \n\n \
  Thank you,\n \
  Admin Team, Invessence.com\n
 
-accountlocked.email=\n\
+txt.advisor_welcome.email=Dear {0}, \n\n \
+   Welcome to Invessence.com! \n \
+ Your userid ({1}) is now registered. \n \
+ please visit us at  \n {2}/register.xhtml?u={3}&r={4} \n \
+ You will be prompted to set your password.  Then you'll be able to logon. \n \
+ If clicking on the link does not work, try copying and pasting it into your browser.\n \
+ If you did not register for this service, please email us directly at info@invessence.com to resolve this issue. \n \
+ Thank you,\n \
+ Admin Team, Invessence.com\n
+
+txt.locked.email=\n\
   Your account has been locked because of a maximum number of incorrect login attempts. \n \
   To unlock your account, please reset your password. \n \
   \n\n \
@@ -89,9 +107,10 @@ Here is the link {2}\n \
 to get you started on personalized investment survey.  It will take approx 5-10 minutes to complete.\n \
 Admin Team, \n\Invessence.com\n
 
-support.info.template=${email_templates_dir}HTMLTemplate-SupportInfo.html
-password.reset.email.template=${email_templates_dir}HTMLTemplate-PasswordReset.html~{0}~{1}~{2}
-signup.email.template=${email_templates_dir}HTMLTemplate-SignUp.html~{0}~{1}~{2}~{3}~{4}
-accountlocked.email.template=${email_templates_dir}HTMLTemplate-AccountLocked.html~{0}~{1}~{2}
-survey.email.template=${email_templates_dir}survey.html~{0}~{1}~{2}~{3}
-invoice.email.template=${email_templates_dir}invoice.html~{0}~{1}~{2}
+html.support.info=${email_templates_dir}invessence-SupportInfo.html
+html.reset.email=${email_templates_dir}invessence-Reset.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
+html.welcome.email=${email_templates_dir}invessence-Welcome.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
+html.welcome-adv.email=${email_templates_dir}invessence-Welcome-Adv.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
+html.locked.email=${email_templates_dir}invessence-Locked.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
+html.survey.email=${email_templates_dir}survey.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
+html.invoice.email=${email_templates_dir}invoice.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
