--- a/tcm/modules/emailer/pom.xml
+++ b/tcm/modules/emailer/pom.xml
@@ -15,7 +15,17 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+   <properties>
+		<org.springframework-version>3.2.0.RELEASE</org.springframework-version>
+	</properties>
     <dependencies>
+
+       <dependency>
+		 	<groupId>com.invessence</groupId>
+		 	<artifactId>service</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+       </dependency>
       <dependency>
          <groupId>commons-beanutils</groupId>
          <artifactId>commons-beanutils</artifactId>
@@ -116,6 +126,8 @@
          <groupId>javax.mail</groupId>
          <artifactId>mail</artifactId>
       </dependency>
+
+
     </dependencies>
 
     <build>
