--- a/tcm/modules/service/pom.xml
+++ b/tcm/modules/service/pom.xml
@@ -18,12 +18,12 @@
 		<org.springframework-version>3.2.0.RELEASE</org.springframework-version>
 	</properties>
 	<dependencies>
-<dependency>
+<!--<dependency>
 		 	<groupId>com.invessence</groupId>
 		 	<artifactId>emailer</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<scope>compile</scope>
-		 </dependency>
+		 </dependency>-->
 		<dependency>
 		 	<groupId>com.invessence</groupId>
 		 	<artifactId>core</artifactId>
