--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -107,10 +107,10 @@ Here is the link {2}\n \
 to get you started on personalized investment survey.  It will take approx 5-10 minutes to complete.\n \
 Admin Team, \n\Invessence.com\n
 
-html.support.info=${email_templates_dir}invessence-SupportInfo.html
-html.reset.email=${email_templates_dir}invessence-Reset.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
-html.welcome.email=${email_templates_dir}invessence-Welcome.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
-html.welcome-adv.email=${email_templates_dir}invessence-Welcome-Adv.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
-html.locked.email=${email_templates_dir}invessence-Locked.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
+html.support.info=${email_templates_dir}buildingbenjamins-SupportInfo.html
+html.reset.email=${email_templates_dir}buildingbenjamins-Reset.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
+html.welcome.email=${email_templates_dir}buildingbenjamins-Welcome.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
+html.welcome-adv.email=${email_templates_dir}buildingbenjamins-Welcome-Adv.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
+html.locked.email=${email_templates_dir}buildingbenjamins-Locked.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
 html.survey.email=${email_templates_dir}survey.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
 html.invoice.email=${email_templates_dir}invoice.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
