TD CTO Version 1.22 - Revised 9/7/2016 Prashant

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -99,6 +99,18 @@ password.set.success=<h1>Your new password has been set!<h1>  \
 registered.success=You are now registered!<h1>  \
 <h4>Shall we start?<h4>
 
+signup.U100=This userid is already taken, please try another
+signup.U101=Failed to save data.  Your session must have timed out.
+signup.U102=Unable to create account. link is not valid.
+signup.U103=Sorry, you are attempting to sign-up for account that is already registered.  <br/>\
+  Either, follow the instruction to activate the account or use forgot password to reset your access.
+signup.U104=This UserID is taken, try another.
+signup.U105=Password don't match criteria or two passwords are not same.
+
+
+signup.EX.100=Exception: Create UserID/Pwd, problem attempting to create simpleuser
+signup.EX.101=Exception: Sorry, you are attempting to activate account, but the link contains invalid data. Call Support
+
 demouser.id.taken=This email address was already registered.   \
   Another email is being sent to create your password, so that you can access your portfolio.
 
