TD CTO Version 1.23 - Revised 9/18/2016 Prashant

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -22,8 +22,8 @@ mbal=Your account has been locked because of a maximum number of incorrect login
 supportdesk.L1=support@invessence.com
 supportdesk.L2=support-L2@invessence.com
 support.info= <p>Please feel free to reach out to our support team with any questions.<br/> \n\
-Contact us by phone <span style="font-weight: bold">(201) 977-1954</span> or email to \n \
-<a href="mailto:support@invessence.com">support@invessence.com</a> </p> \n \
+Contact us by phone <span style="font-weight: bold">{0}</span> or email to \n \
+<a href="mailto:{1}">{1}</a> </p> \n \
 <br/> \n
 sales.info= <p>Please feel free to reach out to our sales team.<br/> \n\
 Contact us by phone <span style="font-weight: bold">(201) 977-1954</span> or email \n \
@@ -42,45 +42,60 @@ txt.reset.email=\n \
   Admin Team, Invessence.com\n
 
 txt.forgot.email=\n \
-  We have received a request to reset your Invessence password. \
+  We have received a request to reset your password. \
  To complete your request, please click on the below link and follow the instructions. \n\
-  {0}/setPassword.xhtml?u={1}&r={2}\n \
+  {0}/setPassword.xhtml?l={1}&r={4}\n \
 \n\
   If clicking on the link doesn't work, try copying and pasting it into your browser\n\
 \n\n \
   Thank you \n \
-  Admin Team, Invessence.com\n
+  Admin Team\n \
+  {10}
 
-txt.welcome.email=Dear {0}, \n\n \
-   Welcome to Invessence.com! \n \
- Your userid ({1}) is now registered. \n \
- please visit us at  \n {2}/register.xhtml?u={3}&r={4} \n \
+txt.activated.email=Dear {5}, \n\n \
+   Welcome to {10}! \n \
+ Your userid ({2}) is now registered. \n \
+ please visit us at  \n {0} \n \
+ When you click on this link, your account will be activated. This link is valid for one use only.\n \
+ We use two level authentication to confirm that the activate an account. \n \
+ By clicking, on the link, we can confirm that the email on the account is same as the one registered. \n\
+ Thank you,\n \
+ Admin Team \n\
+ {10}\n
+
+txt.welcome.email=Dear {5}, \n\n \
+   Welcome to {10}. \n \
+ Your userid ({2}) is now registered. \n \
+ please visit us at  \n {0} \n \
  You will be prompted to set your password.  Then you'll be able to logon. \n \
  If clicking on the link does not work, try copying and pasting it into your browser.\n \
- If you did not register for this service, please email us directly at info@invessence.com to resolve this issue. \n \
+ If you did not register for this service, please email us directly at {8} to resolve this issue. \n \
  Thank you,\n \
- Admin Team, Invessence.com\n
+ Admin Team\n \
+ {10} \n
 
-txt.advisor_welcome.email=Dear {0}, \n\n \
-   Welcome to Invessence.com! \n \
- Your userid ({1}) is now registered. \n \
- please visit us at  \n {2}/register.xhtml?u={3}&r={4} \n \
- You will be prompted to set your password.  Then you'll be able to logon. \n \
- If clicking on the link does not work, try copying and pasting it into your browser.\n \
- If you did not register for this service, please email us directly at info@invessence.com to resolve this issue. \n \
- Thank you,\n \
- Admin Team, Invessence.com\n
+txt.advisor_welcome.email=Dear {5}, \n\n \
+  Welcome to {10}. \n \
+Your userid ({2}) is now registered. \n \
+please visit us at  \n {0} \n \
+You will be prompted to set your password.  Then you'll be able to logon. \n \
+If clicking on the link does not work, try copying and pasting it into your browser.\n \
+If you did not register for this service, please email us directly at {8} to resolve this issue. \n \
+Thank you,\n \
+Admin Team\n \
+{10} \n
 
 txt.locked.email=\n\
   Your account has been locked because of a maximum number of incorrect login attempts. \n \
   To unlock your account, please reset your password. \n \
   \n\n \
-  Please follow this link: {0}/setPassword.xhtml?u={1}&r={2}\n \
+  Please follow this link: {0}/setPassword.xhtml?l={1}&r={4}\n \
   to reset your password.\n \
   If clicking on the link does not work, try copying and pasting it into your browser.\n \
   \n\
   Thank you, \n \
-  Admin Team, Invessence.com  \n
+  Admin Team, \n \
+  {10} \n
 
 welcome.firsttime=Welcome!  Let's start with creating your personalized portfolio. \
 Click on the below (Add Portfolio) button to get started.
@@ -100,16 +115,24 @@ registered.success=You are now registered!<h1>  \
 <h4>Shall we start?<h4>
 
 signup.U100=This userid is already taken, please try another
-signup.U101=Failed to save data.  Your session must have timed out.
+signup.U101=Failed to save data.  Your session might have timed out.
 signup.U102=Unable to create account. link is not valid.
 signup.U103=Sorry, you are attempting to sign-up for account that is already registered.  <br/>\
   Either, follow the instruction to activate the account or use forgot password to reset your access.
 signup.U104=This UserID is taken, try another.
 signup.U105=Password don't match criteria or two passwords are not same.
+signup.U106=There was some error when attempting to save this userid.  Please reach out to support desk.
+signup.U107=Email Address is invalid, or it is not registered.
 
 
 signup.EX.100=Exception: Create UserID/Pwd, problem attempting to create simpleuser
 signup.EX.101=Exception: Sorry, you are attempting to activate account, but the link contains invalid data. Call Support
+signup.EX.102=Exception: Sorry, you are attempting to activate account, but the link contains invalid data. Call Support
+signup.EX.103=Exception: Exception: Sorry, there was an issue with signup.  Please call support.
+signup.EX.104=Exception: It seems that there was an error attempting to save Questions/Ans. Section.
+signup.EX.105=Exception: Failed to save Q/A data.  Your session might have timed out.
+
+
 
 demouser.id.taken=This email address was already registered.   \
   Another email is being sent to create your password, so that you can access your portfolio.
@@ -120,10 +143,11 @@ to get you started on personalized investment survey.  It will take approx 5-10 
 Admin Team, \n\Invessence.com\n
 
 html.support.info=${email_templates_dir}buildingbenjamins-SupportInfo.html
-html.reset.email=${email_templates_dir}buildingbenjamins-Reset.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
-html.welcome.email=${email_templates_dir}buildingbenjamins-Welcome.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
-html.welcome-adv.email=${email_templates_dir}buildingbenjamins-Welcome-Adv.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
-html.locked.email=${email_templates_dir}buildingbenjamins-Locked.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
-html.survey.email=${email_templates_dir}survey.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
-html.invoice.email=${email_templates_dir}invoice.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}
+html.reset.email=${email_templates_dir}buildingbenjamins-Reset.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.activated.email=${email_templates_dir}buildingbenjamins-Activated.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.welcome.email=${email_templates_dir}buildingbenjamins-Welcome.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.welcome-adv.email=${email_templates_dir}buildingbenjamins-Welcome-Adv.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.locked.email=${email_templates_dir}buildingbenjamins-Locked.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.survey.email=${email_templates_dir}survey.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.invoice.email=${email_templates_dir}invoice.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
 
