TD CTO Version 1.23 - Revised 9/18/2016 Prashant

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -123,6 +123,7 @@ signup.U104=This UserID is taken, try another.
 signup.U105=Password don't match criteria or two passwords are not same.
 signup.U106=There was some error when attempting to save this userid.  Please reach out to support desk.
 signup.U107=Email Address is invalid, or it is not registered.
+signup.U108=Failed to create user-logon session.
 
 
 signup.EX.100=Exception: Create UserID/Pwd, problem attempting to create simpleuser
