TD CTO Version 1.23 - Revised 9/19/2016 Prashant

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -114,7 +114,7 @@ password.set.success=<h1>Your new password has been set!<h1>  \
 registered.success=You are now registered!<h1>  \
 <h4>Shall we start?<h4>
 
-signup.U100=This userid is already taken, please try another
+signup.U100=This email is already registered.
 signup.U101=Failed to save data.  Your session might have timed out.
 signup.U102=Unable to create account. link is not valid.
 signup.U103=Sorry, you are attempting to sign-up for account that is already registered.  <br/>\
