--- a/tcm/modules/broker-webservices/pom.xml
+++ b/tcm/modules/broker-webservices/pom.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <parent>
-      <artifactId>modules</artifactId>
-      <groupId>com.invessence</groupId>
-      <version>1.0-SNAPSHOT</version>
-   </parent>
-   <modelVersion>4.0.0</modelVersion>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"><parent><artifactId>modules</artifactId><groupId>com.invessence</groupId><version>1.0-SNAPSHOT</version></parent>
+    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>broker-webservices</artifactId>
-
-    <properties>
+<properties>
 		<org.springframework-version>3.2.0.RELEASE</org.springframework-version>
 	</properties>
 	<dependencies>
@@ -112,15 +106,25 @@
 <artifactId>saaj-api</artifactId>
 <version>1.3.5</version></dependency>
 
-       <!-- DocuSign API dependencies -->
-
-       <dependency>
+	<!-- DocuSign API dependencies -->
+		<dependency>
+    <groupId>com.docusign</groupId>
+    <artifactId>docusign-esign-java</artifactId>
+    <version>2.0.2</version>
+</dependency>
+<!--    <dependency>
    <groupId>com.docusign</groupId>
    <artifactId>docusign-esign-java</artifactId>
    <version>2.0.1</version>
-</dependency>
-       <!-- Base64 encoding that works in both JVM and Android -->
-       <dependency>
+</dependency>-->
+
+<!--		<dependency>
+    <groupId>uk.co.techblue</groupId>
+    <artifactId>docusign-restclient-core</artifactId>
+    <version>2.0.4</version>
+</dependency>-->
+			<!-- Base64 encoding that works in both JVM and Android -->
+			<dependency>
       <groupId>com.brsanthu</groupId>
       <artifactId>migbase64</artifactId>
       <version>2.2</version>
