--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -114,6 +114,10 @@ password.set.success=<h1>Your new password has been set!<h1>  \
 registered.success=You are now registered!<h1>  \
 <h4>Shall we start?<h4>
 
+signup.1=Invalid Link
+signup.2=Error
+signup.3=Warning
+
 signup.U100=This email is already registered.
 signup.U101=Failed to save data.  Your session might have timed out.
 signup.U102=Unable to create account. link is not valid.
@@ -124,6 +128,7 @@ signup.U105=Password don't match criteria or two passwords are not same.
 signup.U106=There was some error when attempting to save this userid.  Please reach out to support desk.
 signup.U107=Email Address is invalid, or it is not registered.
 signup.U108=Failed to create user-logon session.
+signup.U109=Unable to activate account. link is not valid.
 
 
 signup.EX.100=Exception: Create UserID/Pwd, problem attempting to create simpleuser
