Code checked in 9/24/2016

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -138,6 +138,10 @@ signup.EX.103=Exception: Exception: Sorry, there was an issue with signup.  Plea
 signup.EX.104=Exception: It seems that there was an error attempting to save Questions/Ans. Section.
 signup.EX.105=Exception: Failed to save Q/A data.  Your session might have timed out.
 
+dctd.100="Cannot start TD application ( No account number was assigned )."
+dctd.101="TD service is not active"
+
+dctd.EX.101="TD service system error."
 
 
 demouser.id.taken=This email address was already registered.   \
