Projection HighChart - Sudhir

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -129,6 +129,7 @@ signup.U106=There was some error when attempting to save this userid.  Please re
 signup.U107=Email Address is invalid, or it is not registered.
 signup.U108=Failed to create user-logon session.
 signup.U109=Unable to activate account. link is not valid.
+signup.U110=Reset email sent..
 
 
 signup.EX.100=Exception: Create UserID/Pwd, problem attempting to create simpleuser
