DocuSign Exception handling Process Code

--- a/tcm/modules/broker-webservices/src/main/resources/webServicesParameters.properties
+++ b/tcm/modules/broker-webservices/src/main/resources/webServicesParameters.properties
@@ -51,5 +51,28 @@ userDetailsSelectSql=
 userExtInfoInsertSql=
 userExtInfoUpdateSql=
 
+#API generic messages
+#In case of response not get from SERVICES
+dcReqDataIssueMsg=Required data not available
+dcReqDataIssueCode=601
+
+#In case of any  at Webservic side (External)
+dcEGenErrMsg=DocuSign Service request processing issue
+dcEGenErrCode=602
+
+#In case of any  at Webservic side (Internal)
+dcIGenErrMsg=DocuSign Service request creation issue
+dcIGenErrCode=603
+
+#In case of any User registration issue
+dcTechIssueMsg=There is technical difficulties while processing request
+dcTechIssueCode=604
+
+#Dc Request Successful Message
+dcSuccessMsg=Request executed successfully
+dcSuccessCode=0000
+
+
+
 
 
