Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -21,10 +21,10 @@ mbal=Your account has been locked because of a maximum number of incorrect login
 
 supportdesk.L1=support@invessence.com
 supportdesk.L2=support-L2@invessence.com
-support.info= <p>Please feel free to reach out to our support team with any questions.<br/> \n\
+support.info= <p style="font-size: 14px;">Please feel free to reach out to our support team with any questions.<br/><br/> \n\
 Contact us by phone <span style="font-weight: bold">{0}</span> or email to \n \
 <a href="mailto:{1}">{1}</a> </p> \n \
-<br/> \n
+ \n
 sales.info= <p>Please feel free to reach out to our sales team.<br/> \n\
 Contact us by phone <span style="font-weight: bold">(201) 977-1954</span> or email \n \
 <a href="mailto:sales@invessence.com">sales@invessence.com</a> with any questions.</p> \n \
@@ -128,8 +128,8 @@ signup.U105=Password don't match criteria or two passwords are not same.
 signup.U106=There was some error when attempting to save this userid.  Please reach out to support desk.
 signup.U107=Email Address is invalid, or it is not registered.
 signup.U108=Failed to create user-logon session.
-signup.U109=Unable to activate account. link is not valid.
-signup.U110=Reset email sent..
+signup.U109=Unable to activate account. Link is not valid.
+signup.U110=Reset email sent.
 
 
 signup.EX.100=Exception: Create UserID/Pwd, problem attempting to create simpleuser
@@ -137,7 +137,7 @@ signup.EX.101=Exception: Sorry, you are attempting to activate account, but the 
 signup.EX.102=Exception: Sorry, you are attempting to activate account, but the link contains invalid data. Call Support
 signup.EX.103=Exception: Exception: Sorry, there was an issue with signup.  Please call support.
 signup.EX.104=Exception: It seems that there was an error attempting to save Questions/Ans. Section.
-signup.EX.105=Exception: Failed to save Q/A data.  Your session might have timed out.
+signup.EX.105=Exception: Failed to save Q/A data. Your session might have timed out.
 
 dctd.100="Cannot start TD application ( No account number was assigned )."
 dctd.101="TD service is not active"
