Validation Code Client Take On Page

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -162,3 +162,23 @@ html.locked.email=${email_templates_dir}buildingbenjamins-Locked.html~{0}~{1}~{2
 html.survey.email=${email_templates_dir}survey.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
 html.invoice.email=${email_templates_dir}invoice.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
 
+validator.acctType.requiredMsg=***Account Type is required!
+
+validator.firstName.requiredMsg=***First Name is required!
+validator.lastName.requiredMsg=***Last Name is required!
+validator.citizenship.requiredMsg=***Must be US Citizen!
+validator.email.requiredMsg=***Email Address is required!
+validator.ssn.requiredMsg=***SSN is required!
+validator.ssn.formatMsg=***Enter valid SSN (xxx-xx-xxxx)!
+validator.dob.requiredMsg=***Birthdate is required!
+validator.dob.formatMsg=***Enter valid Birthdate (mm/dd/yyyy)!
+
+validator.street.requiredMsg=***Street Address is required!
+validator.city.requiredMsg=***City is required!
+validator.state.requiredMsg=***State is required!
+validator.zip.requiredMsg=***Zip Code is required!
+validator.zip.formatMsg=***Enter valid Zip Code (xxxxx-xxxx)!
+
+validator.beneRelation.requiredMsg=***Benefiaciary Relationship is required!
+validator.beneType.requiredMsg=***Type of Beneficiary is required!
+validator.beneShare.requiredMsg=***Share is required!
