Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -168,6 +168,7 @@ validator.firstName.requiredMsg=***First Name is required!
 validator.lastName.requiredMsg=***Last Name is required!
 validator.citizenship.requiredMsg=***Must be US Citizen!
 validator.email.requiredMsg=***Email Address is required!
+validator.phoneno.requiredMsg=***Phone Number is required!
 validator.ssn.requiredMsg=***SSN is required!
 validator.ssn.formatMsg=***Enter valid SSN (xxx-xx-xxxx)!
 validator.dob.requiredMsg=***Birthdate is required!
@@ -182,3 +183,13 @@ validator.zip.formatMsg=***Enter valid Zip Code (xxxxx-xxxx)!
 validator.beneRelation.requiredMsg=***Benefiaciary Relationship is required!
 validator.beneType.requiredMsg=***Type of Beneficiary is required!
 validator.beneShare.requiredMsg=***Share is required!
+
+validator.spfname.requiredMsg=***Name of SPF is required!
+validator.spfrelation.requiredMsg=***Relationship of SPF is required!
+validator.spftitle.requiredMsg=***Political title is required!
+validator.spfcountry.requiredMsg=***Country of office is required!
+validator.sharecompany.requiredMsg=***Company Name is required!
+validator.shareaddress.requiredMsg=***Company Adddress is required!
+validator.sharecity.requiredMsg=***Company city is required!
+validator.sharestate.requiredMsg=***Company state is required!
+validator.bdentity.requiredMsg=***Entity is required!
