--- a/tcm/modules/web/src/main/resources/webmessages.properties
+++ b/tcm/modules/web/src/main/resources/webmessages.properties
@@ -193,3 +193,15 @@ validator.shareaddress.requiredMsg=***Company Adddress is required!
 validator.sharecity.requiredMsg=***Company city is required!
 validator.sharestate.requiredMsg=***Company state is required!
 validator.bdentity.requiredMsg=***Entity is required!
+
+validator.fundtype.requiredMsg=***Fund type is required!
+validator.investamt.requiredMsg=***Investment amount is required!
+validator.bankaccounttype.requiredMsg=***Account type is required!
+validator.bankname.requiredMsg=***Bank Name is required!
+validator.bankaccountname.requiredMsg=***Name on bank account is required!
+validator.abaroutingno.requiredMsg=***ABA Routing Number is required!
+validator.bankaccountno.requiredMsg=***Bank Account Number is required!
+validator.bankaccounttitle.requiredMsg=***Account Title is required!
+validator.deliveryfirm.requiredMsg=***Name of delivery firm is required!
+validator.accttype.requiredMsg=***Account Type is required!
+validator.fullpartial.requiredMsg=***Full/Partial transfer is required!
